--- a/direct.html
+++ b/direct.html
@@ -38,7 +38,7 @@
 
         <!-- Real Time Information Box -->
         <div id="info-box" style="display: flex; flex-direction: column; align-items: center;">
-            <body onload="fetch_eta();">
+            <body>
                 <!-- Total Time Display -->
                 <div style="display: flex; justify-content: space-between; font-family: Arial; font-size: 1.5em; margin: 20px">
                     <div style="text-align: left; padding-right: 51px; font-weight: bold;">Trip Duration:</div>                    
@@ -102,7 +102,7 @@
             function fetch_eta() {
                 var button = document.getElementById("start-btn");
                 if (button.innerHTML === "GO") {
-                    button.innerHTML = "Reload";
+                    button.innerHTML = "RESET";
                     // Get selected route from dropdown menu
                     const selectedRoute = document.getElementById("routes").value;
                     // Assuming departureTime is the time in milliseconds until departure
@@ -111,14 +111,17 @@
                     var transitTime = 60000*45;
                     var transitTimeInMinutes = Math.floor(transitTime / 60000);
                     var transitTimeInSeconds = Math.floor((transitTime % 60000) / 1000);
-                    document.getElementById("total-time").innerHTML += (transitTimeInMinutes.toString().padStart(2, '0') + ":" + transitTimeInSeconds.toString().padStart(2, '0'));                    //var eta = getETA(selectedRoute);
+                    var formattedTransitTime = transitTimeInMinutes.toString().padStart(2, '0') + ":" + transitTimeInSeconds.toString().padStart(2, '0');
+                    document.getElementById("total-time").innerHTML += formattedTransitTime;
+                    //var eta = getETA(selectedRoute);
                     var eta = new Date().getTime() + transitTime;
-                    document.getElementById("eta").innerHTML += new Date(eta).toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});                    
+                    var formatted_eta = new Date(eta).toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});  
+                    document.getElementById("eta").innerHTML += formatted_eta;
                     //var departureTime = getDepartureTime(selectedRoute);
                     var departureTime = new Date().getTime() + 360000;
                     startCountdown(departureTime);
-                } else {
-                    button.innerHTML = "GO";
+                } else if (button.innerHTML === "RESET") {
+                    location.reload();
                 }
             }
         </script>
