--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
     <script>
         //frontend app cal to the direct API backend (python)
         (async function() {
-        const { text } = await( await fetch(`/api/function_app`)).json();
+        const { text } = await( await fetch(`/api/function_app.py`)).json();
         document.querySelector('Jacob').textContent = text;
         button.innerHTML = text;
         }());
