--- a/src/index.html
+++ b/src/index.html
@@ -117,13 +117,14 @@
     <audio id="alarm" src="alarm.mp3"></audio>
     
     <script>
-        //frontend app cal to the direct API backend (python)
-        (async function() {
-        const { text } = await( await fetch(`/api/function_app.py`)).json();
-        document.querySelector('Jacob').textContent = text;
-        button.innerHTML = text;
-        }());
 
+        //test api fetch
+        (async function(){
+            const response = await fetch('/api/function_app.py');
+            const { text } = await response.json();
+            console.log('Response:', JSON.stringify(text));
+        }());
+            
 
         // Set notification volume
         function set_volume() {
@@ -160,7 +161,8 @@
             departureHr = departureHr.toString();
             departureMin = departureMin.toString();        
             // use promise with fetch API to get route and itinerary
-            fetch('http://localhost:8000/direct.py', {
+            //fetch('http://localhost:8000/direct.py', {
+            fetch('/api/function_app.py', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/x-www-form-urlencoded',
