--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,7 @@
 
         //test api fetch
         (async function(){
-            const response = await fetch('/api/function_app.py');
+            const response = await fetch('https://fetcheta.azurewebsites.net/');
             const { text } = await response.json();
             console.log('Response:', JSON.stringify(text));
         }());
