--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
     <title>Transit Application</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
