new response test1

--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,7 @@
         //new robust test fetch
         (async function(){
             fetch('https://fetcheta.azurewebsites.net/', {
-                name: JSON.stringify("Jacob");
+                name: JSON.stringify("Jacob")
             })
                 .then(response => {
                     if (!response.ok) {
