--- a/src/index.html
+++ b/src/index.html
@@ -186,7 +186,7 @@
                 })
                 .catch(error => {
                     console.error('Error:', error);
-                    return error;
+                    //return error;
                 });
         }
         // Countdown Timer Function
