--- a/src/index.html
+++ b/src/index.html
@@ -155,13 +155,9 @@
             departureMin = departureMin.toString();        
             // use promise with fetch API to get route and itinerary
             fetch('https://fetcheta.azurewebsites.net/', {
-                method: 'POST',
+                method: 'GET',
                 headers: {
-                    'Content-Type': 'application/x-www-form-urlencoded',
-                    'Content-Length': JSON.stringify({
-                        route: document.getElementById("routes").value, 
-                        departure: departureHr + ":" + departureMin + departureAmPm
-                    }).length
+                    'Content-Type': 'application/json'
                 },
                 body: JSON.stringify({
                     route: document.getElementById("routes").value,
@@ -172,9 +168,8 @@
                     if (!response.ok) {
                         console.log(response);
                         throw new Error('Network response was not ok');
-
                     }
-                    return response.json();
+                    //return response.json();
                 })
                 .then(data => {
                     // Update span for routeLegs and eta for display on page
