--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 <html>
 
 <head>
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="icon" type="image/gif" href="favicon.png">
     <meta charset="utf-8">
     <title>Transit Application</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -156,7 +158,7 @@
             var requested_route = document.getElementById("routes").value;
             var requested_time = encodeURIComponent(departureHr + ":" + departureMin +":"+ departureAmPm)
             //encode into url
-            var url = "https://fetcheta.azurewebsites.net/api/req?code=PatpgdhpUlNvDJMfhW19tfEo_R5ahZMRheHX6Ck87h5OAzFu-u9Vdw==/?route=" + requested_route + "&departure=" + requested_time;
+            var url = encodeURIComponent("https://fetcheta.azurewebsites.net/api/req?code=t62K1LV77DjQyncQTlE-AtUjIBXMtABzhMNKs2DBHD_RAzFuu9sxtQ==/?route=" + requested_route + "&departure=" + requested_time);
    
             // jQuery get
             $.get(url, function (data, status) {
