--- a/src/index.html
+++ b/src/index.html
@@ -155,7 +155,7 @@
             var requested_route = document.getElementById("routes").value;
             var requested_time = departureHr + ":" + departureMin +":"+ departureAmPm
             //concatenate url
-            var url = "https://fetcheta.azurewebsites.net/api/req?code=jhdirect_eta_func_accesskey&route=" + requested_route + "&departure=" + requested_time;
+            var url = "https://fetcheta.azurewebsites.net/api/req?code=request_eta&route=" + requested_route + "&departure=" + requested_time;
    
             // jQuery get
             $.get(url, function (data, status) {
