--- a/src/index.html
+++ b/src/index.html
@@ -154,8 +154,8 @@
             var departureAmPm = document.getElementById("departure-am-pm").value;
             var requested_route = document.getElementById("routes").value;
             var requested_time = departureHr + ":" + departureMin +":"+ departureAmPm
-            //concatenate url
-            var url = "https://fetcheta.azurewebsites.net/api/&route=" + requested_route + "&departure=" + requested_time;
+            //concatenate urlhttps://fetcheta.azurewebsites.net/api/req?code=vaXwlu3Y6IKGW_0HalZW7tCz_e5-FQzm0jjYv9acq6NmAzFuSCw09Q==
+            var url = "https://fetcheta.azurewebsites.net/api/req?route=" + requested_route + "&departure=" + requested_time;
    
             // jQuery get
             $.get(url, function (data, status) {
