--- a/src/index.html
+++ b/src/index.html
@@ -155,7 +155,7 @@
             var requested_route = document.getElementById("routes").value;
             var requested_time = departureHr + ":" + departureMin +":"+ departureAmPm
             //concatenate url https://fetcheta.azurewebsites.net/api/req
-            var url = "https://fetcheta.azurewebsites.net/api/req?route=" + requested_route + "&departure=" + requested_time;
+            var url = "https://fetcheta.azurewebsites.net/api/req?code=l3vptaRts2uAYPBwy__1V4JXOmfdQKr1y-Tb4ohMbO1PAzFugau2-A==&route=" + requested_route + "&departure=" + requested_time;
    
             // jQuery get
             $.get(url, function (data, status) {
