--- a/src/index.html
+++ b/src/index.html
@@ -154,8 +154,8 @@
             var departureAmPm = document.getElementById("departure-am-pm").value;
             var requested_route = document.getElementById("routes").value;
             var requested_time = departureHr + ":" + departureMin +":"+ departureAmPm
-            //concatenate url https://fetcheta.azurewebsites.net/api/req?code=trigger
-            var url = "https://fetcheta.azurewebsites.net/api/req?code=trigger&route=" + requested_route + "&departure=" + requested_time;
+            //concatenate url https://fetcheta.azurewebsites.net/api/http_trigger?code=trigger
+            var url = " https://fetcheta.azurewebsites.net/api/http_trigger?code=trigger&route=" + requested_route + "&departure=" + requested_time;
    
             // jQuery get
             $.get(url, function (data, status) {
