--- a/src/index.html
+++ b/src/index.html
@@ -154,7 +154,7 @@
             var departureAmPm = document.getElementById("departure-am-pm").value;
             var requested_route = document.getElementById("routes").value;
             var requested_time = departureHr + ":" + departureMin +":"+ departureAmPm
-            //concatenate url https://fetcheta.azurewebsites.net/api/http_trigger?code=10mHrGnkSrtz5FADL3o5C9L8L5sZIcy_ghxwvsIRLTCuAzFuAmXU2w==
+            //concatenate url
             var url = " https://fetcheta.azurewebsites.net/api/http_trigger?&route=" + requested_route + "&departure=" + requested_time;
    
             // jQuery get
